# Spine

./: .gitignore  Implementation_Strategy_Report.md  Planning-and-Implementation-Strategy.md  README.ko.md  README.md  SECURITY.ko.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: USER_GUIDE.en.md  USER_GUIDE.ko.md
docs/en/: README.md  api-reference.md  artifacts-and-lineage.md  compatibility-and-migrations.md  context-models.md  examples-and-tests-results.md  extensions-and-custom-fields.md  getting-started.md  observability-records.md  serialization-and-schema.md  understanding-spine-models.md  validation-rules.md  workflow-examples.md
docs/ko/: README.md  api-reference.md  artifacts-and-lineage.md  compatibility-and-migrations.md  context-models.md  examples-and-tests-results.md  extensions-and-custom-fields.md  getting-started.md  observability-records.md  serialization-and-schema.md  understanding-spine-models.md  validation-rules.md  workflow-examples.md
examples/: basic_training_flow.py
scripts/: check_repo_security.py
src/spine/: __init__.py  exceptions.py
src/spine/api/: __init__.py
src/spine/compat/: __init__.py  migrations.py  reader.py  registry.py  types.py
src/spine/extensions/: __init__.py  registry.py
src/spine/models/: __init__.py  artifacts.py  common.py  context.py  records.py  relations.py
src/spine/serialization/: __init__.py  canonical.py
src/spine/validation/: __init__.py  core.py  report.py
tests/: test_spine_models.py  test_spine_serialization.py
tests/fixtures/: artifact_manifest_v1.json  metric_record_v1.json  project_v1.json
